update composer provider

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,13 @@
             "Hgy\\PackageTest\\": "src/"
         }
        
-    }
+    },
+     "extra": {
+        "laravel": {
+            "providers": [
+                "Hgy\\PackageTest\\Providers\\TestServiceProvider"
+            ]
+
+        }
 }
 
